--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "add": "^2.0.6",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.2.11",
+    "lucide-react": "^0.396.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0"
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.3.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "eslint": "^8",
