--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "shadcn": "shadcn-ui"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
     "add": "^2.0.6",
@@ -19,12 +23,13 @@
     "ethers": "5.7.2",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.11",
-    "lucide-react": "^0.396.0",
+    "lucide-react": "^0.397.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
