Minor bug fixes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_TEMPLATE_CLIENT_ID=4d16234ec765fd9c1b0432e110d9bf42
+NEXT_PUBLIC_FIREBASE_API=AIzaSyDt5t3PkGJ3w6vxIdGuYrEQG76jN74vbjI
 NEXT_TOKENIZE_ADDRESS=0xc511a94eD6dA43ECcf89235A929D98DD782dC203
